--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,38 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
+	"compilerOptions":
+  {
 		"moduleResolution": "node",
+    // "types":
+    // [
+    //   "cypress",
+    //   "node",
+    //   "vitest/globals",
+    //   "svelte"
+    // ],
 		"module": "es2020",
-		"lib": [
-      "es2020", 
+		"lib":
+    [
+      "es2020",
       "DOM",
       "ES2021.String",
-      "es5", 
-      "es6", 
-      "dom", 
+      "es5",
+      "es6",
+      "dom",
       "dom.iterable"
     ],
 		"target": "es2020",
 		/**
-			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
+		  svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
 			to enforce using \`import type\` instead of \`import\` for Types.
-			*/
+    */
 		"importsNotUsedAsValues": "error",
 		"isolatedModules": true,
 		"resolveJsonModule": true,
 		/**
 			To have warnings/errors of the Svelte compiler at the correct position,
 			enable source maps by default.
-			*/
+    */
 		"sourceMap": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
@@ -31,10 +40,24 @@
 		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
-		"paths": {
+		"paths":
+    {
 			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "docker-server.js", "heroku-server.js"]
+	"include":
+  [
+    "src/**/*.d.ts",
+    "src/**/*.js",
+    "src/**/*.ts",
+    "src/**/*.svelte",
+    "docker-server.js",
+    "heroku-server.js"
+  ],
+  "exclude":
+  [
+    "build/**/*",
+    ".svelte-kit/**/*"
+  ]
 }
