--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@betarena/scores-lib": "^1.2.6",
+		"@betarena/scores-lib": "^1.2.8",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.18.4",
@@ -61,6 +61,7 @@
 		"colorthief": "^2.4.0",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
+		"dotenv": "^16.3.1",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
