--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
 		"unique-username-generator": "^1.1.3",
+		"vite-plugin-css-injected-by-js": "^3.2.1",
+		"vite-plugin-preload": "^0.3.1",
 		"xml-formatter": "^2.6.1"
 	}
 }
