--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -7,7 +7,7 @@ body:
 - type: markdown
   attributes:
     value: |
-      Please create a new Feature Request by filling out this form.
+      Please, fill out this form to submit a new `Feature Request` for the Betarena - Scores Platform.
 
 - type: checkboxes
   attributes:
@@ -27,7 +27,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Describe the solution you'd like
+    label: Feature Request description goes here.
     description: |
       A clear and concise description of what you want to happen. Include any alternative solutions you've considered.
   validations:
